--- a/CleanArch/Presentation/CleanArch.Mvc/CleanArch.Mvc.csproj
+++ b/CleanArch/Presentation/CleanArch.Mvc/CleanArch.Mvc.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infra.Data\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
