--- a/CleanArch/Presentation/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/Presentation/CleanArch.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "UniversityIdentityDBConnection": "DataSource=app.db;Cache=Shared",
+    "UniversityDBConnection":"DataSource=university.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
