--- a/CleanArch/Presentation/CleanArch.Mvc/CleanArch.Mvc.csproj
+++ b/CleanArch/Presentation/CleanArch.Mvc/CleanArch.Mvc.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Infra.Data\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+    <ProjectReference Include="..\..\Infra.IoC\CleanArch.Infra.IoC\CleanArch.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
