Implemented the APi and fixed the sqlite path issue.

--- a/CleanArch/Api/CleanArch.Api/appsettings.Development.json
+++ b/CleanArch/Api/CleanArch.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "UniversityIdentityDBConnection": "DataSource=app.db;Cache=Shared",
+    "UniversityDBConnection":"DataSource=../../Presentation/CleanArch.Mvc/university.db;Cache=Shared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
