--- a/CleanArch/Api/CleanArch.Api/CleanArch.Api.csproj
+++ b/CleanArch/Api/CleanArch.Api/CleanArch.Api.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
@@ -13,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Infra.IoC\CleanArch.Infra.IoC\CleanArch.Infra.IoC.csproj" />
+    <ProjectReference Include="..\..\Application\CleanArch.Application\CleanArch.Application.csproj" />
   </ItemGroup>
 
 </Project>
