--- a/CleanArch/Application/CleanArch.Application/CleanArch.Application.csproj
+++ b/CleanArch/Application/CleanArch.Application/CleanArch.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\..\Domain\CleanArch.Domain\CleanArch.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
